--- a/apps/task-manager/package.json
+++ b/apps/task-manager/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.11",
     "validator": "^10.9.0"
